// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа кнопок "Добавить", "Редактировать" и "Удалить" клиента 1`] = `
<div>
  <input
    onClick={[Function]}
    type="button"
    value="МТС"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <div
    className="MobileCompanyName"
  >
     Компания «
    Velcom
    » 
  </div>
  <hr />
  <input
    className="watchClients"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    className="MobileCompany"
  >
    <tbody>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          Blocked
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    id="addClientButton"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`работа кнопок "Добавить", "Редактировать" и "Удалить" клиента 2`] = `
<div>
  <input
    onClick={[Function]}
    type="button"
    value="МТС"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <div
    className="MobileCompanyName"
  >
     Компания «
    Velcom
    » 
  </div>
  <hr />
  <input
    className="watchClients"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    className="MobileCompany"
  >
    <tbody>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          Blocked
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    id="addClientButton"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <div>
    <h3>
       New Client 
    </h3>
    <label>
      Фамилия: 
      <input
        defaultValue=""
      />
       
    </label>
    <br />
    <label>
      Имя: 
      <input
        defaultValue=""
      />
       
    </label>
    <br />
    <label>
      Отчество: 
      <input
        defaultValue=""
      />
       
    </label>
    <br />
    <label>
      Баланс: 
      <input
        defaultValue={0}
      />
       
    </label>
    <br />
    <button
      onClick={[Function]}
    >
      Save
    </button>
    <button
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`работа кнопок "Добавить", "Редактировать" и "Удалить" клиента 3`] = `
<div>
  <input
    onClick={[Function]}
    type="button"
    value="МТС"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <div
    className="MobileCompanyName"
  >
     Компания «
    Velcom
    » 
  </div>
  <hr />
  <input
    className="watchClients"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    className="MobileCompany"
  >
    <tbody>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          Blocked
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    id="addClientButton"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`работа кнопок "Добавить", "Редактировать" и "Удалить" клиента 4`] = `
<div>
  <input
    onClick={[Function]}
    type="button"
    value="МТС"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <div
    className="MobileCompanyName"
  >
     Компания «
    Velcom
    » 
  </div>
  <hr />
  <input
    className="watchClients"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    className="MobileCompany"
  >
    <tbody>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          Blocked
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    id="addClientButton"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <div>
    <h3>
       Edit Client 
    </h3>
    <label>
      Фамилия: 
      <input
        defaultValue="Иванов"
      />
       
    </label>
    <br />
    <label>
      Имя: 
      <input
        defaultValue="Иван"
      />
       
    </label>
    <br />
    <label>
      Отчество: 
      <input
        defaultValue="Иванович"
      />
       
    </label>
    <br />
    <label>
      Баланс: 
      <input
        defaultValue={200}
      />
       
    </label>
    <br />
    <button
      onClick={[Function]}
    >
      Save
    </button>
    <button
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`работа кнопок "Добавить", "Редактировать" и "Удалить" клиента 5`] = `
<div>
  <input
    onClick={[Function]}
    type="button"
    value="МТС"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <div
    className="MobileCompanyName"
  >
     Компания «
    Velcom
    » 
  </div>
  <hr />
  <input
    className="watchClients"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className={null}
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    className="MobileCompany"
  >
    <tbody>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          Active
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          Blocked
        </td>
        <td>
          <input
            id="editClientButton"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="deleteClientButton"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    id="addClientButton"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;
